feat: Class management (create, assign teacher, schedule)